# INF2004-Embedded-Micro-mouse

./: CMakeLists.txt  README.md  main.c  main.h
driver/: CMakeLists.txt  floodfill.h  floodfill2.c
driver/encoder/: CMakeLists.txt  encoder.c  encoder.h
driver/irline/: CMakeLists.txt  irline.c  irline.h
driver/magnometer/: CMakeLists.txt  magnometer.c  magnometer.h
driver/mapping/: CMakeLists.txt  floodfill.c  floodfill.h
driver/motor/: CMakeLists.txt  motor.c  motor.h
driver/ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
driver/web_server/: CMakeLists.txt  cgi.h  htmldata.c  main.c  makefsdata.py  sensor_data.c  sensor_data.h  ssi.h
driver/web_server/html_files/: index.shtml  meow.js
driver/wifi/: CMakeLists.txt
